[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jellyjoin"
version = "0.1.0"
description = "Utilities for dataset similarity and joins"
authors = [
    { name = "Oran Looney", email = "olooney@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "jellyfish>=1.2.0"
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "black",
]

[tool.setuptools.packages.find]
where = ["src"]

